// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> should match the snapshot for negative value 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k068 useBoxStyles_makeResponsiveStyle_key_bp__7o6k061c useBoxStyles_makeResponsiveStyle_key_bp__7o6k062g useBoxStyles_makeResponsiveStyle_key_bp__7o6k063k useBoxStyles_display_inlineBlock__7o6k06e1 useBoxStyles_position_relative__7o6k06do useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c1 useBoxStyles_backgroundColours_gray900__7o6k06ch"
>
  <span
    class="reset_inlineText__6swfds2 useBoxStyles_textAlign_left__7o6k06dp useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_white__w6to7if useTextStyles_fontWeight_bold__w6to7ip useTextStyles_sizes_2__w6to7i2 NumberBubble_bubbleText__pyrcml0 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dm"
  >
    -3
  </span>
</div>
`;

exports[`<Section /> should match the snapshot for positive value 1`] = `
<div
  class="reset_block__6swfds3 useBoxStyles_makeResponsiveStyle_key_bp__7o6k064 useBoxStyles_makeResponsiveStyle_key_bp__7o6k0618 useBoxStyles_makeResponsiveStyle_key_bp__7o6k062c useBoxStyles_makeResponsiveStyle_key_bp__7o6k063g useBoxStyles_display_inlineBlock__7o6k06e1 useBoxStyles_position_relative__7o6k06do useBoxStyles_makeResponsiveStyle_key_bp__7o6k06c1 useBoxStyles_backgroundColours_gray900__7o6k06ch"
>
  <span
    class="reset_inlineText__6swfds2 useBoxStyles_textAlign_left__7o6k06dp useTextStyles_root__w6to7i0 reset_inlineText__6swfds2 useTextStyles_colours_white__w6to7if useTextStyles_fontWeight_bold__w6to7ip useTextStyles_sizes_2__w6to7i2 NumberBubble_bubbleText__pyrcml0 reset_block__6swfds3 useBoxStyles_position_absolute__7o6k06dm"
  >
    3
  </span>
</div>
`;
